# optimize-nn

./: .gitignore  LICENSE.md  README.md  TASK.md  setup.cfg
bib/: refs.bib
csv/: results.csv
md/: report.md
src/opt_nn/: given.py  improved.py  kdtree.py  profile.py  xyz.py
tables/: results.csv
tests/: test_given.py  test_improved.py
