[metadata]
name = optimize-nn
version = 0.0.1
author = Peter Prescott
author_email = prescott.peter@gmail.com
description = Nearest Neighbour Search Optimization 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peterprescott/optimize-nn
project_urls =
    Bug Tracker = https://github.com/peterprescott/optimize-nn/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    pandas
    matplotlib
    numpy

[options.packages.find]
where = src
